
	* R/arrays.R: Rewrote EuropeanOptionArrays() to have vectorisation on
	the C++ side rather than in R; external interface unchanged and the
	old implementation is still available just in case
	* src/vanilla.cpp: New function EuropeanOptionArrays() looping over a
	grid defined by vectors of any two of the six possible numeric inputs
	* man/EuropeanOptionArrays.Rd: Updated accordingly
	
	* src/*cpp: Drop QL_ prefix from functions called from R
	* R/*: Drop QL_ prefix in functions called by .Call()

2010-08-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/rquantlib.hpp: Renamed to rquantlib.h to suppress a warning
	in the upcoming R release (as requested by Kurt Hornik)
	* src/*.cpp: Adjust to '#include <rquantlib.h>' instead

2010-08-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.3

2010-08-02  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.options.R: Updated asian option test for
	arithmetic averaging based on QuantLib's test-suite code
	* R/asian.R: Removed two unused parameters, updated use of maturity
	used only for geometric averaging
	* man/asian.Rd: Corresponding manual page update

        * src/Makevars.win: Simplified Makefile.win into Makevars.win and
	updated to e.g. the new sub-arch path for Rscript.exe

2010-07-05  Khanh Nguyen  <knguyen@cs.umb.edu>

	* src/asian.cpp: Added arithmetic average case
	* R/asian.R: Idem
	* man/asian.Rd: Idem

2010-06-30  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.calendar.R: Beginnings of calendar unit tests

2010-06-23  Dirk Eddelbuettel  <edd@debian.org>

	* src/*: Converted remainder of code to new Rcpp API

2010-06-20  Dirk Eddelbuettel  <edd@debian.org>

	* R/calendar.R: New helper function setCalendarContext()
	setting calendar, fixingDays and settleDate
	* src/calendar.cpp: Implementation, setting RQLContext
	* man/setCalendarContext.Rd: Documentation

	* src/bermudan.cpp: take calendar info from RQLContext
	* src/discount.cpp: idem
	* src/utils.cpp: idem
